# ICO-Solana

./: package-lock.json  package.json
ico/: Cargo.toml  bet.json
ico/src/: lib.rs  processor.rs
ico/src/instructions/: create.rs  mod.rs  presale.rs  sale.rs  transfer.rs  whitelist.rs
test/: ico.test.js  instruction.js
